@YELP_HELP_RULES@
HELP_ID = lightsoff

HELP_MEDIA = \
	figures/lightsoff.jpg		\
	figures/lightsoff_logo.jpg	\
	figures/lo1.jpg			\
	figures/lightsoff.ogv

HELP_FILES = \
	basic.page		\
	bug-filing.page		\
	develop.page		\
	documentation.page	\
	index.page		\
	legal.xml		\
	license.page		\
	rules.page		\
	strategy.page		\
	translate.page

HELP_LINGUAS = ca de el es fi fr gl ko ro ru sl sv zh_CN

-include $(top_srcdir)/git.mk
