lightsoff_help_pages = [
    'basic.page',
    'bug-filing.page',
    'develop.page',
    'documentation.page',
    'index.page',
    'legal.xml',
    'license.page',
    'rules.page',
    'strategy.page',
    'translate.page',
]

lightsoff_help_media = [
    'figures/lightsoff.jpg',
    'figures/lightsoff_logo.jpg',
    'figures/lo1.png',
    'figures/lightsoff.ogv',
]

gnome.yelp(meson.project_name(),
           sources: lightsoff_help_pages,
           media: lightsoff_help_media)
